vlib/v/checker/tests/assign_expr_undefined_err_j.vv
fn main() {
	mut a := [a]
	println(a)
}
